gitops/apps/observability/grafana/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
